[package]
name = "rumdl_cli"
version = "0.0.87"
edition = "2024"

[dependencies]
# Core library
rumdl = { path = "../core", package = "rumdl_core" }

# Direct dependencies used inside the CLI source (pulled in via include!)
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
ignore = "0.4.23"
memmap2 = "0.9"
rayon = "1.10.0"
indicatif = "0.17.11"
dialoguer = "0.11.0"
log = "0.4.27"
regex = "1.11"
anyhow = "1.0"
glob = "0.3.2"
walkdir = "2.5.0"
